Updated About text

--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -6,71 +6,122 @@
 <!-- main-content -->
 
 <section>
-   <div class="container">
+    <div class="container">
 
-       <div class="row">
-       
-       
+        <div class="row">
 
-       <div class="col-sm-6 col-sm-offset-2">
 
-       	  <h3>{{message "lang.what-is-yorubaname"}}?</h3>
-       	  
-       	  <p class="lead">YorubaName.com is an online intervention to preserve and document all Yorùbá names in a multimedia format. It is part of a long-term project to document all types of African cultural experiences on the internet as a way of ensuring the survival of African identities in their various expressions.</p>
-       	  
-       	  <p>Initially presented as a university thesis in 2005, this multimedia dictionary of Yorùbá Names found a new iteration in January 2015 as a crowdsourced platform run by volunteer language enthusiasts from around the world. It is supported by funds from hundreds of individual donors who contributed to an Indiegogo fundraising campaign that ran from January to March 2015.</p>
+            <div class="col-sm-6 col-sm-offset-2">
 
-       	  <h4>{{message "lang.how-names-collected"}}?</h4>
+                <h3>{{message "lang.what-is-yorubaname"}}?</h3>
+                <p class="lead">YorubaName.com is an online intervention to preserve and document all Yorùbá names in
+                    a multimedia format. It is part of a long-term project to document all types of African cultural
+                    experiences on the internet as a way of ensuring the survival of African identities in their various
+                    expressions.</p>
 
-		<p>All the names in this database were gathered from word of mouth, reference books, other published and unpublished materials, radio and television, the internet, family histories, and quite simply from asking every single person we meet about their names! Field trips by volunteer linguists added an extra layer of names, meanings and sometimes elements of local history linked to the names as well.</p>
+                <p>Initially presented as a university thesis in 2005, this multimedia dictionary of Yorùbá names
+                    found a new iteration in January 2015 as a crowdsourced platform run by volunteer language
+                    enthusiasts from around the world. It is supported by funds from hundreds of individual donors who
+                    contributed to an Indiegogo fundraising campaign that ran from January to March 2015. This public
+                    app was launched in February 2016.</p>
 
-		<h4>{{message "lang.about-tts"}}...</h4>
+                <h4>{{message "lang.how-names-collected"}}?</h4>
+                <p>All the names in this database were gathered from word of mouth, reference books, other published and
+                    unpublished materials, radio and television, the internet, family histories, and quite simply from
+                    asking every single person we meet about their names! Field trips by volunteer linguists will add an
+                    extra layer to the research and we currently work in collaboration with scholars and enthusiasts
+                    from all walks of life. We hope to gather not just meanings but elements of local history linked to
+                    the names as well.</p>
 
-		<q>The audio files attached to each name in this dictionary were generated through speech synthesis, using a technique refined and adapted by team members of the YorubaName project. </q>
+                <h4>{{message "lang.how-to-use"}}?</h4>
+                <p>As it is now, you will be able to use the dictionary to find the meaning, spelling, tone-marking, and
+                    location of any Yorùbá name in the world. Just enter the name in the space provided on the
+                    homepage and hit “enter”. Sometimes the name will show up in the drop down suggestion list.
+                    Sometimes not. You won’t know if the name is or isn’t in the database until you hit "enter" so give
+                    it a try.</p>
 
-		<p>Some of the output might not be perfect at first. Our promise is to keep experimenting until we reach perfection in pronunciation: by then, this dictionary will have become a fantastic tool to teach any non-Yorùbá speaker how to correctly pronounce a Yorùbá name.</p>
+                <h4>{{message "lang.about-tone-mark"}}</h4>
+                <p>For search, do not worry if you don’t know the appropriate tone marks on the name you’re looking for.
+                    Just type it, as long as you know how it is spelt, and hit “enter”. We have made sure that the
+                    dictionary can return your search whether or not you have typed it correctly. If your spelling is
+                    incorrect, the dictionary will also return the closest matches for you to choose from. What you can
+                    be
+                    sure of when you find what you're looking for is that the tone marks on the name entries will be
+                    correct. We have them all fully vetted by competent scholars and linguists.</p>
 
-		<h4>{{message "lang.lets-build-together"}}</h4>
+                <p>For users of the dictionary interested in using tone-marking on their words and sentences in their
+                    daily lives, and for our lexicographers who will need to properly tone-mark all the entries in the
+                    dictionary, we released a free tone-marking software for Windows and Mac a while ago, which you can
+                    download here along with its user guide. Feel free to use it, and to recommend it to all your Yorùbá
+                    friends far and wide. The survival of Yorùbá in writing (and on the internet) depends on accurate
+                    and proper use of tone marks on all your Yorùbá words, even those that appear inside English (or any
+                    other language) sentences.</p>
 
-		<p>Dictionary entries are dynamic, so as to allow both you, the users, and our in-house linguists to add information or correct any mistakes that may have slipped through the verification process. As a crowdsourced project, our aim is to keep improving each entry in order to preserve the integrity of the meaning of each name for our users and for future generations.</p>
+                <h4>{{message "lang.work-in-progress"}}...</h4>
+                <p>Because we are just beginning, some of the names may not have all their fields complete. If you come
+                    across any of such names, and you have information that can help complete them, please use the
+                    “improve this entry” button under the name to suggest what is missing in the entry and we will add
+                    it at the earliest possible time.</p>
 
-		<p>Ultimately, it's up to all of us to make the online dictionary of Yorùbá names an authoritative resource allowing anyone with an internet connection to explore this beautiful aspect of Yorùbá culture.</p>
+                <h4>{{message "lang.about-tts"}}...</h4>
+                <p>As promised in our master plan, the names in this dictionary eventually have audio prompts beside
+                    each name entry which the user can click on in order to hear the pronunciation of each entry. This
+                    functionality hasn’t been fully completed, so we have not launched it at this stage. But watch out
+                    for it at Phase II of the project launch.</p>
 
-       </div>
+                <h4>{{message "lang.join-us-lex"}}</h4>
+                <p>If you are a competent speaker/writer/scholar of Yorùbá willing to join our list of volunteer
+                    lexicographers who have access to the dashboard for easier opportunity to help edit and proofread
+                    the entries, and to make bulk addition of names, then we need you! Send us an email at
+                    project@yorubaname.com with “Lexicographer” in the subject title. Perks include having your name on
+                    the site, and having a chance to participate in all in-house activities and events.</p>
 
-       <div class="col-sm-3">
+                <h4>{{message "lang.lets-build-together"}}</h4>
+                <p>Dictionary entries are dynamic, so as to allow both you, the users, and our in-house linguists to add
+                    information or correct any mistakes that may have slipped through the verification process. As a
+                    crowdsourced project, our aim is to keep improving each entry in order to preserve the integrity of
+                    the meaning of each name for our users and for future generations.</p>
 
-           <br>
+                <p>Ultimately, it's up to all of us to make the online dictionary of Yorùbá names an authoritative
+                    resource allowing anyone with an internet connection to explore this beautiful aspect of
+                    culture.</p>
 
-           <h3 style="color:#aaa;"><a href="/team">Team Profile</a></h3>
+            </div>
 
-           <h4>Administration</h4>
+            <div class="col-sm-3">
 
-			<p>Kọlá Túbọsún<br> Dadépọ̀ Adérẹ̀mí<br> Laila Le Guen</p>
+                <br>
 
-			<h4>Lexicography &amp; Research</h4>
+                <h3 style="color:#aaa;"><a href="/team">Team Profile</a></h3>
 
-			<p>Kọlá Túbọsún<br> Laila Le Guen<br> Victor Williamson</p>
+                <h4>Administration</h4>
 
-			<h4>Design, UX and Software</h4>
+                <p>Kọlá Túbọsún<br> Dadépọ̀ Adérẹ̀mí<br> Laila Le Guen</p>
 
-			<p>Dadépọ̀ Adérẹ̀mí<br> Tọ́lá Odùmósù<br> Esther Olátúndé<br> Goodswill Koko</p>
+                <h4>Lexicography &amp; Research</h4>
 
-			<h4>Web &amp; PR</h4>
+                <p>Kọlá Túbọsún<br> Laila Le Guen<br> Victor Williamson</p>
 
-			<p>Laila Le Guen<br> Kẹ́hìndé Lìgálí</p>
+                <h4>Design, UX and Software</h4>
 
-			<h4>Data Check &amp; Others</h4>
+                <p>Dadépọ̀ Adérẹ̀mí<br> Tọ́lá Odùmósù<br> Esther Olátúndé<br> Goodswill Koko</p>
 
-			<p>Adéyínká Ajàlà<br> Dave Agboọlá<br> Luis Morais</p>
+                <h4>Web &amp; PR</h4>
 
-      <p style="margin-top:15px;"><a class="btn btn-sm btn-success" href="/team">Click here to see our team profile</a></p>
-       	
-       </div>
+                <p>Laila Le Guen<br> Kẹ́hìndé Lìgálí</p>
 
+                <h4>Data Check &amp; Others</h4>
+
+                <p>Adéyínká Ajàlà<br> Dave Agboọlá<br> Luis Morais</p>
+
+                <p style="margin-top:15px;"><a class="btn btn-sm btn-success" href="/team">Click here to see our team
+                    profile</a></p>
+
+            </div>
+
+        </div>
     </div>
-   </div>
-   
+
 </section>
 
 <!-- /main-content -->
