Updataed volunteer page to include software developers

--- a/website/src/main/resources/website/volunteer.hbs
+++ b/website/src/main/resources/website/volunteer.hbs
@@ -65,7 +65,11 @@
 			<h3>B. Social Media/Outreach</h3>
 			<p>We seek people to help with public outreach. We seek more institutional support (from universities, language organizations, studios, institutes, and other relevant organizations.<br />
 			Required skills: local and international contacts/connection.</p>
-			<p>&nbsp;</p>
+            <h2>Lane 3. Software development related tasks</h2>
+            <p>To maintain and extend the software powering the dictionary, we seek developers who are proficient with Java programming and/or JavaScript programming with experience or interest in working with AngularJs</p>
+            <h4>Required skills:</h4>
+            <p>Proficient in Java or Javascript. Knowledge of Spring framework or AngularJs</p>
+           <p>&nbsp;</p>
 			<p><em>All these positions are on a volunteer basis. We are not – for now – able to offer financial incentive. There are other incentives in the work, however, which are not financial, but we hope that your decision to join us will be because you believe in the work and want to see it succeed.</em></p>
 			<p><em>Send an email to <a href="mailto:volunteer@yorubaname.com?Subject=Volunteer" target="_top">volunteer@yorubaname.com</a> with the word “<strong>volunteer</strong>” and the specific lane and category in the subject line. For instance: “<strong>Volunteer 3A</strong>” for those interested in the PR position.</em></p>
 
