Added link to download keyboard mapping

--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -52,7 +52,9 @@
                 <p>For users of the dictionary interested in using tone-marking on their words and sentences in their
                     daily lives, and for our lexicographers who will need to properly tone-mark all the entries in the
                     dictionary, we released a free tone-marking software for Windows and Mac a while ago, which you can
-                    download here along with its user guide. Feel free to use it, and to recommend it to all your Yorùbá
+                    <a href="http://blog.yorubaname.com/?p=2385" target="_blank">download here</a> along with its
+                    <a href="http://blog.yorubaname.com/wp-content/uploads/2015/08/YorubaNameKeybordforWin-Manual.pdf"
+                       target="_blank">user guide</a>. Feel free to use it, and to recommend it to all your Yorùbá
                     friends far and wide. The survival of Yorùbá in writing (and on the internet) depends on accurate
                     and proper use of tone marks on all your Yorùbá words, even those that appear inside English (or any
                     other language) sentences.</p>
