Fix geolocation when submitting names...list geolocation in sing result page...added name related info to meta tag on name page

--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -58,8 +58,12 @@
 					
 						<br><br>
 						<h4>{{message "lang.geolocation"}}</h4>
-						<p>{{message "lang.commonin"}} {{name.geoLocation.place}}</p>
-					
+						<p>{{message "lang.commonin"}}:
+                                {{#each name.geoLocation}}
+                                    <br/>{{this.place}}
+                                {{/each}}
+                        </p>
+
 					<!-- /geolocation -->
 
 					    <br><br>
