--- a/website/src/main/resources/website/submitnameform.hbs
+++ b/website/src/main/resources/website/submitnameform.hbs
@@ -17,7 +17,7 @@
         <label class="optional">{{message "lang.submitname.enterlocation"}}:</label>
         <select name="suggestedGeoLocation" id="suggestedGeoLocation" multiple="multiple">
             {{#each geoLocations}}
-                <option value="{{this}}">{{this.place}}</option>
+                <option value="{{this.region}}.{{this.place}}">{{this.place}}</option>
             {{/each}}
         </select>
     </div><br>
