--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -13,9 +13,9 @@
     <link href="/assets/css/multiple-select.css" rel="stylesheet">
     <script type="text/javascript" src="http://fast.fonts.net/jsapi/6dc70f84-e724-4068-9f7a-797b1bf01ddb.js"></script>
 
-    <meta property="og:title" content="YorubaNames">
-    <meta property="og:url" content="http://www.yorubaname.com">
-    <meta property="og:description" content="Over 10,000 Yoruba names and still growing...">
+    <meta property="og:title" content="{{#if name.name}}{{name.name}}{{else}}YorubaNames{{/if}}">
+    <meta property="og:url" content="{{#if name.name}}http://{{host}}/entries/{{name.name}}{{else}}http://www.yorubaname.com{{/if}}">
+    <meta property="og:description" content="{{#if name.meaning}}{{name.meaning}}{{else}}Over 10,000 Yoruba names and still growing...{{/if}}">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/assets/img/yd-logo-brown-black.png">
 
